[package]
name = "weppy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
select = "0.6.0"
scraper = "0.17.1"
regex = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.10.0"
thiserror = "1.0"